DownloadManagerController now uses WebState

Instead of using StoreKitLauncher, DownloadManagerController can now
get everything it needs from WebState.

BUG=684063

Review-Url: https://codereview.chromium.org/2740473002
Cr-Commit-Position: refs/heads/master@{#455538}

Former-commit-id: 998ad027faf59d366cd87996d3060e224d4609f1